docs/versioned_docs/version-2.6/api/types.md
import AdFitTopFixed from "@site/src/uis/AdFitTopFixed";

# Types

<AdFitTopFixed />

This page contains the TypeScript types and interfaces used throughout the expo-iap library.

## Core Types

### Product

```typescript
type ProductType = 'inapp' | 'subs';
interface Product {
  id: string;
  title: string;
  description: string;
  type: ProductType;
  displayName?: string;
  displayPrice: string;
  currency: string;
  price?: number;
}
```

### ⚠️ Breaking Change Notice (v2.6+)

**Version 2.6+ Migration**: The `subscription` field in `ProductIos` has changed from a required field to an optional field (`subscription?`). This reflects that not all iOS products have subscription information. Please update your code to handle this field as optional when working with non-subscription products.

iOS product contains additional information:

```typescript
type SubscriptionIosPeriod = 'DAY' | 'WEEK' | 'MONTH' | 'YEAR' | '';
type PaymentMode = '' | 'FREETRIAL' | 'PAYASYOUGO' | 'PAYUPFRONT';

type ProductIOS = Product & {
  displayName: string;
  isFamilyShareable: boolean;
  jsonRepresentation: string;
  subscription?: SubscriptionInfo;
  introductoryPriceNumberOfPeriodsIOS?: string;
  introductoryPriceSubscriptionPeriodIOS?: SubscriptionIosPeriod;
};

type SubscriptionInfo = {
  introductoryOffer?: SubscriptionOffer;
  promotionalOffers?: SubscriptionOffer[];
  subscriptionGroupID: string;
  subscriptionPeriod: {
    unit: SubscriptionIosPeriod;
    value: number;
  };
};

type SubscriptionOffer = {
  displayPrice: string;
  id: string;
  paymentMode: PaymentMode;
  period: {
    unit: SubscriptionIosPeriod;
    value: number;
  };
  periodCount: number;
  price: number;
  type: 'introductory' | 'promotional';
};
```

### Purchase

```typescript
interface Purchase {
  purchaseId: string;
  productId: string;
  transactionId: string;
  transactionDate: number;
  purchaseState: PurchaseState;
  isAcknowledged: boolean;
  originalJson?: string;
  signature?: string;
}
```

### PurchaseState

```typescript
enum PurchaseState {
  PURCHASED = 'PURCHASED',
  PENDING = 'PENDING',
  UNSPECIFIED_STATE = 'UNSPECIFIED_STATE',
}
```

### Subscription

```typescript
interface Subscription {
  productId: string;
  purchaseToken: string;
  isAutoRenewing: boolean;
  expiryTimeMillis: number;
  autoResumeTimeMillis?: number;
  priceCurrencyCode?: string;
  priceAmountMicros?: number;
  countryCode?: string;
  orderId?: string;
  packageName?: string;
}
```

## Platform-Specific Types

### iOS

For other iOS-specific types and enums, refer to the [iOS setup guide](../getting-started/setup-ios.md).

### Android

For Android-specific types and enums, refer to the [Android setup guide](../getting-started/setup-android.md).

## Error Types

For error codes and error handling types, see the [Error Codes](./error-codes.md) documentation.
